# nox-agent

./: .gitattributes  .gitignore  README.md  pyproject.toml
configs/: README.md
docs/: api-local.md  architecture.md  configuration.md  glossary.md  hitl.md  installation-and-distribution.md  local-agent-os-architecture.drawio  local-agent-os-development-plan.md  model-backends.md  modularity.md  roadmap.md  stack.md  testing-and-evals.md  windows-installer.md
docs/adr/: 0001-python-uv-runtime.md  0002-fastapi-as-http-adapter.md  0003-modular-ports-and-adapters.md  0004-sqlite-as-initial-storage-adapter.md  0005-yaml-json-jsonl-conventions.md  0006-typer-as-temporary-cli-adapter.md  0007-human-in-the-loop-by-default.md  0008-installation-and-distribution.md  0009-model-backend-and-providers.md  0010-nox-command-and-workspace.md  0011-windows-installer-experiment.md  0012-event-sourcing.md  0013-governance-initial-controls.md  0014-observability-from-kernel.md  0015-cli-and-jsonl-event-log.md  0016-local-api-adapter.md  0017-modular-persistence.md  0018-workspace-instance-identity.md  README.md
evals/: README.md
packaging/windows/: NoxSetup.iss  nox_pyinstaller_entry.py
scripts/: build_nox_exe.ps1  build_nox_setup.ps1  test_nox_distribution.ps1
src/nox_agent_os/: __init__.py  workspace.py
tests/: test_api_v05.py  test_audit_and_monitor.py  test_cli_model_v07.py  test_cli_smoke.py  test_cli_v04.py  test_governance_minimum.py  test_jsonl_event_store.py  test_kernel_minimum.py  test_modeling_v07.py  test_state_contracts.py  test_storage_v06.py
(+33 files in other folders)
